--- a/wiki/Building.wiki
+++ b/wiki/Building.wiki
@@ -7,7 +7,7 @@ Make sure you have the vim source code downloaded (you won't need the source at 
 localhost~ user$ cd vim71/src
 }}}
 
-Check out source
+Check out the MacVim source
 {{{
 localhost~/vim71/src user$ svn co http://macvim.googlecode.com/svn/trunk MacVim
 }}}
