--- a/wiki/Building.wiki
+++ b/wiki/Building.wiki
@@ -1,6 +1,5 @@
 #summary How to build MacVim
-
-*These are preliminary instructions, I will add all the files and populate the repository soon.*
+#labels Featured,Phase-Implementation
 
 Make sure you have the vim source code downloaded (you won't need the source at the moment, only the runtime files).  Start Terminal and `cd` to the `src` directory of vim, e.g.
 {{{
@@ -20,3 +19,5 @@ The xcode project file expects the Vim executable to be there.  As soon as I fig
 
 Open `MacVim.xcodeproj` (which is inside the `MacVim` folder), and click the 'Build' button (Cmd+B).  This will build the application bundle `MacVim.app` inside `build/Release` (or `build/Debug`, depending on which build configuration is active).
 
+
+The project is set up to build a universal binary, this can be changed in the build settings. Also, once you've built the project once you might want to check the option 'Run script only when installing' inside the info window of 'Targets/MacVim/Run Script'. Doing this means that the Vim runtime files won't be copied every time you build or run the project (it can take some time).
