--- a/wiki/Building.wiki
+++ b/wiki/Building.wiki
@@ -1,28 +1,49 @@
 #summary How to build MacVim
 #labels Featured,Phase-Implementation
 
-First you need to get the Vim source code.  In order to do this, start Terminal and type
+Here is the summary on what you need to do:
+  * Get the vim7 source
+  * Check out the MacVim source from the Google code repository and put it inside `vim7/src/MacVim`
+  * Download `macvim.diff`, `gui_macvim.pro` from the 'Downloads' tab.  Apply the patch to the vim7 source code and put `gui_macvim.pro` inside `vim7/src/proto`
+  * `make` Vim
+  * Open `MacVim/MacVim.xcodeproj` and build it
+
+If those instructions were not enough, then read on...
+
+First download `macvim.diff` and `gui_macvim.pro` to the Desktop (you can put them wherever, but in what follows I will assume you put them there) from the 'Downloads' tab.
+
+Next, you need to get the Vim source code.  In order to do this, start Terminal and type
 {{{
 localhost:~ user$ svn co https://vim.svn.sourceforge.net/svnroot/vim/vim7
 }}}
 This will create the folder vim7 and populate it with the Vim source (be patient, it can take a while).
 
-The next thing is to download the MacVim source and put it in the `vim7/src` folder as follows:
+Next, you need to patch the Vim source and copy the prototype header file. This can be done by typing
 {{{
 localhost:~ user$ cd vim7/src
+localhost:~ user$ cp ~/Desktop/macvim.diff .
+localhost:~ user$ cp ~/Desktop/gui_macvim.pro proto/
+localhost:~ user$ patch -p0 -i macvim.diff
+}}}
+
+The next thing is to download the MacVim source and put it in the `vim7/src` folder as follows:
+{{{
 localhost:~/vim7/src user$ svn co http://macvim.googlecode.com/svn/trunk/ MacVim
 }}}
 
-At the moment it only works to build the GUI, so download the latest snapshot in the 'Downloads' tab, unzip it and move MacVim.app to the desktop, then type
+Now, build Vim 
 {{{
-localhost:~/vim7/src user$ cp ~/Desktop/MacVim.app/Contents/MacOS/Vim .
+localhost:~ user$ autoconf
+localhost:~ user$ ./configure --enable-gui=macvim
+localhost:~ user$ make
 }}}
-The Xcode project file expects the Vim executable to be there.  As soon as I figure out how to, I will put up a patch file so that you can patch the Vim source and build the Vim executable yourself.
+This should produce an executable named `Vim` in the `vim7/src` folder. You can run it in terminal mode (no `-g` switch) and type `:ver` to confirm that it includes the MacVim GUI code (although we are _not_ done yet).
 
-Open `MacVim.xcodeproj` (which is inside the `MacVim` folder), and click the 'Build' button (Cmd+B).  This will build the application bundle `MacVim.app` inside `build/Release` (or `build/Debug`, depending on which build configuration is active).
+Finally, open `MacVim.xcodeproj` (which is inside the `MacVim` folder), and click the 'Build' button (Cmd+B).  This will build the application bundle `MacVim.app` inside `build/Release` (or `build/Debug`, depending on which build configuration is active).
 
+That's it!
 
-The project is set up to build a universal binary, this can be changed in the build settings. Also, once you've built the project once you might want to check the option 'Run script only when installing' inside the info window of 'Targets -> MacVim -> Run Script'. Doing this means that the Vim runtime files won't be copied every time you build or run the project (it can take some time).
+Once you've built the project once you might want to check the option 'Run script only when installing' inside the info window of 'Targets -> MacVim -> Run Script'. Doing this means that the Vim runtime files won't be copied every time you build or run the project (it can take some time).
 
 
 
