--- a/wiki/Building.wiki
+++ b/wiki/Building.wiki
@@ -5,7 +5,7 @@ Here is the summary on what you need to do:
   * Get the vim7 source
   * Check out the !MacVim source from the Google code repository and put it inside `vim7/src/MacVim`
   * Download `macvim.diff`, `gui_macvim.pro` from the 'Downloads' tab.  Apply the patch to the vim7 source code and put `gui_macvim.pro` inside `vim7/src/proto`
-  * `make` Vim
+  * Build Vim with `configure --enable-gui=macvim` and then `make`
   * Open `MacVim/MacVim.xcodeproj` and build it
 
 If those instructions were not enough, then read on...
