--- a/wiki/Building.wiki
+++ b/wiki/Building.wiki
@@ -1,6 +1,8 @@
 #summary How to build MacVim
 #labels Featured,Phase-Implementation
 
+===For the impatient===
+
 Here is the summary on what you need to do:
   * Get the vim7 source
   * Check out the !MacVim source from the Google code repository and put it inside `vim7/src/MacVim`
@@ -9,6 +11,9 @@ Here is the summary on what you need to do:
   * Open `MacVim/MacVim.xcodeproj` and build it
 
 If those instructions were not enough, then read on...
+
+
+===The long version===
 
 First download `macvim.diff` and `gui_macvim.pro` to the Desktop (you can put them wherever, but in what follows I will assume you put them there) from the 'Downloads' tab.
 
@@ -44,4 +49,21 @@ Finally, open `MacVim.xcodeproj` (which is inside the `MacVim` folder), and clic
 That's it!
 
 
+===Building MacVim whilst using it to code===
 
+If you have one version of !MacVim in e.g. `/Applications` and then build another with Xcode and try to run it, there will be trouble (since both are listening to the same named port for new Vim connections).  To get around this do the following (assuming you have installed !MacVim in the Applications folder):
+  * Open a Finder window on `/Applications`
+  * Rename `MacVim` to `MacVim-devel`
+  * Ctrl-click on the `MacVim-devel` icon and choose 'Show Package Contents'
+  * In the window that opens, double-click on `Contents` and then on `Info.plist`; this will bring up the 'Property List Editor'
+  * Expand `Root`, change `CFBundleIdentifier` to `org.vim.MacVim-devel`, and change `CFBundleName` to `MacVim-devel`; save and quit the 'Property List Editor'
+
+You can now run !MacVim-devel whilst building and running !MacVim in Xcode.
+
+
+===Building a universal binary===
+
+By default only a native binary will be built.  To build a universal binary you must first pass `--with-mac-arch=both` to `configure` and then edit the build settings for _both_ `MacVim.xcodeproj` and `PSMTabBarControl.xcodeproj`.  This is how you change the build settings in Xcode:
+  * Select `MacVim` under `Targets` in the left-hand column in Xcode, then press Cmd-I to open up the 'Info' window
+  * Click the `Build` tab and locate the `Architectures` setting, double-click on it and select both `PowerPC` and `Intel`
+  * Do the same for the PSMTabBarControlProject
