Edited wiki page through web user interface.

--- a/wiki/Building.wiki
+++ b/wiki/Building.wiki
@@ -49,7 +49,7 @@ Finally, open `MacVim.xcodeproj` (which is inside the `MacVim` folder), and clic
 That's it!
 
 
-===Building MacVim whilst using it to code===
+===Building !MacVim whilst using it to code===
 
 If you have one version of !MacVim in e.g. `/Applications` and then build another with Xcode and try to run it, there will be trouble (since both are listening to the same named port for new Vim connections).  To get around this do the following (assuming you have installed !MacVim in the Applications folder):
   * Open a Finder window on `/Applications`
