--- a/wiki/CodeOverview.wiki
+++ b/wiki/CodeOverview.wiki
@@ -1,6 +1,6 @@
 #summary Overview of the MacVim source code
 
-Here is a short overview of the MacVim source code. _Note that the information in here is not intended to be exhaustive and it might not be completely up to date_.
+Here is a short overview of the !MacVim source code. _Note that the information in here is not intended to be exhaustive and it might not be completely up to date_.
 
 !MacVim consists of two major parts: !MacVim.app and Vim.  Vim is the actual text editor and contains no GUI related code. !MacVim.app is the GUI which coordinates one or more Vim processes at the same time. Code shared between !MacVim and Vim goes in `MacVim.[h|m]`.
 
@@ -22,7 +22,6 @@ Here is a short overview of the MacVim source code. _Note that the information i
   * State query messages can be sent synchronously, just add the appropriate message in `MMBackendProtocol`.
   * Output from Vim to !MacVim arrives in `processCommandQueue:` in `MMFrontendProtocol`.
   * Take care not to call `processInput:data:` too often or the app might stall.  If a message may be sent very rapidly, then the `wait` flag in `MMVimController` `sendMessage:data:wait:` should be set to `NO`.
-
 
 
 
