--- a/wiki/Building.wiki
+++ b/wiki/Building.wiki
@@ -8,7 +8,7 @@ _Note: Patching procedure changed with r245 on Sep 18 2007_
 Here is the summary on what you need to do:
   * Get the vim7 source
   * Check out the !MacVim source from the Google code repository and put it inside `vim7/src/MacVim`
-  * Download the latest patch archive `macvim-r*-patch.tar.gz` from the 'Downloads' tab. The archive contains `macvim.diff`, `runtime/doc/gui_mac.txt`, and `src/proto/gui_macvim.pro`. Unarchive in the vim7/ folder and apply the patch `macvim.diff`.
+  * Download the latest patch archive `macvim-r*-patch.tar.gz` from the 'Downloads' tab. The archive contains `macvim.diff`, `runtime/doc/gui_mac.txt`, and `src/proto/gui_macvim.pro`. Unarchive in the `vim7/` folder and apply the patch `macvim.diff`.
   * Build Vim with `configure --enable-gui=macvim` and then `make`
   * Open `MacVim/MacVim.xcodeproj` and build it
 
@@ -73,6 +73,7 @@ By default only a native binary will be built.  To build a universal binary you 
 
 
 
+ 
  
  
  
